force-app/main/default/objects/Discovery_Assessment__c/Discovery_Assessment__c.object-meta.xml
<CustomObject>
    <label>Discovery Assessment</label>
    <nameField>
        <label>Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discovery Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>