force-app/main/default/objects/Discovery_Assessment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Discovery Assessments</relationshipLabel>
    <relationshipName>Discovery_Assessments</relationshipName>
</CustomField>