force-app/main/default/objects/Discovery_Assessment__c/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Under $5K</fullName><default>false</default><label>Under $5K</label></value>
            <value><fullName>$5K - $25K</fullName><default>false</default><label>$5K - $25K</label></value>
            <value><fullName>$25K - $100K</fullName><default>false</default><label>$25K - $100K</label></value>
            <value><fullName>$100K - $500K</fullName><default>false</default><label>$100K - $500K</label></value>
            <value><fullName>$500K+</fullName><default>false</default><label>$500K+</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>