force-app/main/default/objects/Discovery_Assessment__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>1-10</fullName><default>false</default><label>1-10</label></value>
            <value><fullName>11-50</fullName><default>false</default><label>11-50</label></value>
            <value><fullName>51-200</fullName><default>false</default><label>51-200</label></value>
            <value><fullName>201-1000</fullName><default>false</default><label>201-1000</label></value>
            <value><fullName>1000+</fullName><default>false</default><label>1000+</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>