force-app/main/default/objects/Discovery_Assessment__c/fields/Discovery_Type__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Type__c</fullName>
    <label>Discovery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cybersecurity</fullName><default>false</default><label>Cybersecurity</label></value>
            <value><fullName>AI</fullName><default>false</default><label>AI</label></value>
            <value><fullName>IT Support</fullName><default>false</default><label>IT Support</label></value>
            <value><fullName>Automation</fullName><default>false</default><label>Automation</label></value>
            <value><fullName>Mixed</fullName><default>false</default><label>Mixed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>