force-app/main/default/objects/Discovery_Assessment__c/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <label>Employee Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>