force-app/main/default/objects/Discovery_Assessment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Discovery Assessments</relationshipLabel>
    <relationshipName>Discovery_Assessments_Opp</relationshipName>
</CustomField>