force-app/main/default/objects/Discovery_Assessment__c/fields/Overall_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Overall_Risk_Level__c</fullName>
    <label>Overall Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>