force-app/main/default/objects/Discovery_Assessment__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Discovery Assessments</relationshipLabel>
    <relationshipName>Discovery_Assessments_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>