force-app/main/default/objects/Discovery_Assessment__c/fields/Primary_Pain_Point__c.field-meta.xml
<CustomField>
    <fullName>Primary_Pain_Point__c</fullName>
    <label>Primary Pain Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>