force-app/main/default/objects/Discovery_Assessment__c/fields/Primary_Systems__c.field-meta.xml
<CustomField>
    <fullName>Primary_Systems__c</fullName>
    <label>Primary Systems</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>