force-app/main/default/objects/Discovery_Assessment__c/fields/Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Range__c</fullName>
    <label>Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Under $1M</fullName><default>false</default><label>Under $1M</label></value>
            <value><fullName>$1M - $5M</fullName><default>false</default><label>$1M - $5M</label></value>
            <value><fullName>$5M - $25M</fullName><default>false</default><label>$5M - $25M</label></value>
            <value><fullName>$25M - $100M</fullName><default>false</default><label>$25M - $100M</label></value>
            <value><fullName>$100M+</fullName><default>false</default><label>$100M+</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>