force-app/main/default/objects/Discovery_Assessment__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>This Month</fullName><default>false</default><label>This Month</label></value>
            <value><fullName>Next Month</fullName><default>false</default><label>Next Month</label></value>
            <value><fullName>This Quarter</fullName><default>false</default><label>This Quarter</label></value>
            <value><fullName>Next Quarter</fullName><default>false</default><label>Next Quarter</label></value>
            <value><fullName>6-12 Months</fullName><default>false</default><label>6-12 Months</label></value>
            <value><fullName>12+ Months</fullName><default>false</default><label>12+ Months</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>