force-app/main/default/objects/Discovery_Assessment__c/fields/Urgency_Level__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Level__c</fullName>
    <label>Urgency Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>This Quarter</fullName>
            </value>
            <value>
                <fullName>Future / Exploring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>